# DynamicRPC-esp32

./: CMakeLists.txt  README  ffi.h  rpccall.c  rpccall.h  rpcclient.c  rpcclient.h  rpcmsg.c  rpcmsg.h  rpcpack.h  rpcserver.c  rpcserver.h  rpcstruct.c  rpctypes.h
libffi/: libffi.la
